<?xml version="1.0"?>
<package format="2">
  <name>tf_sample</name>
  <version>0.1.0</version>
  <description>tf_sample</description>

  <maintainer email="mizuno.naoki@rm.is.tohoku.ac.jp">Naoki Mizuno</maintainer>

  <license>MIT</license>

  <url type="website">https://github.com/naoki-mizuno/tf_sample</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf</depend>

  <export>
  </export>
</package>
